--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.1",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^2.0.0",
     "@capacitor/core": "2.0.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
