--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.1",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -29,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "animate.css": "^3.7.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
