--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular-calendar": "^0.28.11",
+    "angular-calendar-week-hours-view": "^1.0.2",
     "animate.css": "^3.7.2",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-calendar": "^5.1.5",
     "core-js": "^2.5.4",
+    "date-fns": "^2.12.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
