--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cordova-plugin-calendar": "^5.1.5",
     "core-js": "^2.5.4",
     "date-fns": "^2.12.0",
+    "date-format": "^3.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -51,7 +52,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
