--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/core": "2.0.0",
     "@ionic-native/calendar": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/local-notifications": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -81,7 +82,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "browser"
