--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/android": "^2.0.0",
-    "@capacitor/core": "2.0.0",
     "@ionic-native/calendar": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/local-notifications": "^5.24.0",
@@ -34,8 +32,11 @@
     "angular-calendar": "^0.28.11",
     "angular-calendar-week-hours-view": "^1.0.2",
     "animate.css": "^3.7.2",
+    "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.5",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "core-js": "^2.5.4",
     "date-fns": "^2.12.0",
     "date-format": "^3.0.0",
@@ -49,8 +50,8 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "2.0.0",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "3.1.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
@@ -81,12 +82,15 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
