--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "@ionic-native/calendar": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/http": "^5.24.0",
     "@ionic-native/local-notifications": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -33,8 +34,10 @@
     "animate.css": "^3.7.2",
     "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-calendar": "^5.1.5",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "core-js": "^2.5.4",
     "date-fns": "^2.12.0",
@@ -85,7 +88,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "browser",
