--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/http": "^5.24.0",
     "@ionic-native/local-notifications": "^5.24.0",
+    "@ionic-native/network": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -91,7 +92,8 @@
       "cordova-plugin-local-notification": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "browser",
